defined headers to install.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@156 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,24 @@
+
+# here the headers to install are defined 
+include serial/Makefile.am.include
+include parallel/Makefile.am.include
+include duneinterface/Makefile.am.include
+
+# use the subdirectories as include dir 
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)
-AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I$(DUNEADDS)/modules/mpich-1.2.6_SuSE9.2gcc/include
+AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I./serial -I./parallel -I./duneinterface -I$(DUNEADDS)/modules/mpich-1.2.6_SuSE9.2gcc/include
 AM_LDFLAGS = -static 
 
+# build libALU3dGrid 
 lib_LTLIBRARIES = libALU3dGrid.la
-#if HAVE_MPI
-AM_CPPFLAGS += -I./serial -I./parallel
-#nodist_libALU3dGrid_la_SOURCES = alu3dgrid_parallel.cc 
-#else 
+
+# headers to install 
+nobase_include_HEADERS = alu3dgrid_serial.h alu3dgrid_parallel.h stlheaders.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs)
+if MPI
+# build lib with parallel support 
+nodist_libALU3dGrid_la_SOURCES = alu3dgrid_parallel.cc 
+else 
+# build only serial grid lib
 nodist_libALU3dGrid_la_SOURCES = alu3dgrid_serial.cc 
-#endif
+endif
 
