--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 # don't follow the full GNU-standard
-AUTOMAKE_OPTIONS = foreign
+AUTOMAKE_OPTIONS = foreign 1.5
 
 # do everything in the subdirs
 SUBDIRS = src
