--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,10 +14,11 @@ lib_LTLIBRARIES = libALU3dGrid.la
 
 # headers to install 
 nobase_include_HEADERS = alu3dgrid_serial.h alu3dgrid_parallel.h stlheaders.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs)
-#if MPI
+
+if MPI
 # build lib with parallel support 
-#nodist_libALU3dGrid_la_SOURCES = alu3dgrid_parallel.cc 
-#else 
+nodist_libALU3dGrid_la_SOURCES = alu3dgrid_parallel.cc 
+else 
 # build only serial grid lib
 nodist_libALU3dGrid_la_SOURCES = alu3dgrid_serial.cc 
-#endif
+endif
