added dune_gitter_impl to headers.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@178 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,7 +10,7 @@ LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)
 AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I./serial -I./parallel -I./duneinterface 
 
 # build libALU3dGrid 
-lib_LTLIBRARIES = libALU3dGrid.la
+lib_LTLIBRARIES = libalu3dgrid.la
 
 # headers to install 
 nobase_include_HEADERS = alu3dgrid_serial.h alu3dgrid_parallel.h stlheaders.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs)
@@ -21,10 +21,10 @@ if MPI
 # add mpi path to cpplags 
 AM_CPPFLAGS += $(MPI_CPPFLAGS)
 # build lib with parallel support 
-nodist_libALU3dGrid_la_SOURCES = alu3dgrid_serial.cc alu3dgrid_parallel.cc 
+nodist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc alu3dgrid_parallel.cc 
 
 else 
 
 # build only serial grid lib
-nodist_libALU3dGrid_la_SOURCES = alu3dgrid_serial.cc 
+nodist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc 
 endif
