--- a/src/.cvsignore
+++ b/src/.cvsignore
@@ -1,9 +1,9 @@
 Makefile
 Makefile.in
-libALU3dGrid.la
 alu3dgrid_serial.o
 alu3dgrid_serial.lo
 alu3dgrid_parallel.o
 alu3dgrid_parallel.lo
 .libs
 .deps
+libalu3dgrid.la
