bugfix for automake verions < 1.8.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@195 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,5 @@
 # Makefile.am for building the ALU3d-Grid library
+AUTOMAKE_OPTIONS = foreign 1.5
 
 # here the headers to install are defined 
 include serial/Makefile.am.include
@@ -7,7 +8,9 @@ include duneinterface/Makefile.am.include
 
 # use the subdirectories as include dir 
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)
-AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I./serial -I./parallel -I./duneinterface 
+
+# work arround for automake versions < 1.8 
+ALU3D_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I./serial -I./parallel -I./duneinterface 
 
 # build libALU3dGrid 
 lib_LTLIBRARIES = libalu3dgrid.la
@@ -19,12 +22,15 @@ if MPI
 # if MPI was found the parallel version is build 
 
 # add mpi path to cpplags 
-AM_CPPFLAGS += $(MPI_CPPFLAGS)
+AM_CPPFLAGS = $(ALU3D_CPPFLAGS) $(MPI_CPPFLAGS)
 # build lib with parallel support 
 nodist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc alu3dgrid_parallel.cc 
 
 else 
+# if no mpi build only serial lib 
 
+AM_CPPFLAGS = $(ALU3D_CPPFLAGS)
 # build only serial grid lib
 nodist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc 
+
 endif
