--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,8 @@
 # Makefile.am for building the ALU3d-Grid library
 AUTOMAKE_OPTIONS = foreign 1.5
 
+SUBDIRS = serial parallel duneinterface 
+
 # here the headers to install are defined 
 include serial/Makefile.am.include
 include parallel/Makefile.am.include
@@ -15,6 +17,7 @@ lib_LTLIBRARIES = libalu3dgrid.la
 # headers to install 
 nobase_include_HEADERS = alu3dgrid_serial.h alu3dgrid_parallel.h stlheaders.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs)
 
+
 if MPI 
 # if MPI was found the parallel version is build 
 
@@ -23,7 +26,7 @@ AM_CPPFLAGS = $(ALU3D_CPPFLAGS) $(MPI_CPPFLAGS)
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)
 
 # build lib with parallel support 
-nodist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc alu3dgrid_parallel.cc 
+dist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc alu3dgrid_parallel.cc 
 libalu3dgrid_la_LIBADD = $(PARTY_LDFLAGS) $(PARTY_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) 
 
 else 
@@ -32,6 +35,6 @@ else
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)
 AM_CPPFLAGS = $(ALU3D_CPPFLAGS)
 # build only serial grid lib
-nodist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc 
+dist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc 
 
 endif
