Changes name of ALUGrid. Also namespace changes.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@370 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,32 +9,32 @@ include parallel/Makefile.am.include
 include duneinterface/Makefile.am.include
 
 # work arround for automake versions < 1.8 
-ALU3D_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I./serial -I./parallel -I./duneinterface 
+ALUGRID_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I./serial -I./parallel -I./duneinterface 
 
 # build libALU3dGrid 
-lib_LTLIBRARIES = libalu3dgrid.la
+lib_LTLIBRARIES = libalugrid.la
 
 # headers to install 
-nobase_include_HEADERS = alu3dgrid_serial.h alu3dgrid_parallel.h stlheaders.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs)
+nobase_include_HEADERS = alugrid_serial.h alugrid_parallel.h stlheaders.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs)
 
 
 if MPI 
 # if MPI was found the parallel version is build 
 
 # add mpi path to cpplags 
-AM_CPPFLAGS = $(ALU3D_CPPFLAGS) $(MPI_CPPFLAGS)
+AM_CPPFLAGS = $(ALUGRID_CPPFLAGS) $(MPI_CPPFLAGS)
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)
 
 # build lib with parallel support 
-dist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc alu3dgrid_parallel.cc 
-libalu3dgrid_la_LIBADD = $(PARTY_LDFLAGS) $(PARTY_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) 
+dist_libalugrid_la_SOURCES = alugrid_serial.cc alugrid_parallel.cc 
+libalugrid_la_LIBADD = $(PARTY_LDFLAGS) $(PARTY_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) 
 
 else 
 # if no mpi build only serial lib 
 
 LDADD = $(ALL_PKG_LDFLAGS) $(ALL_PKG_LIBS)
-AM_CPPFLAGS = $(ALU3D_CPPFLAGS)
+AM_CPPFLAGS = $(ALUGRID_CPPFLAGS)
 # build only serial grid lib
-dist_libalu3dgrid_la_SOURCES = alu3dgrid_serial.cc 
+dist_libalugrid_la_SOURCES = alugrid_serial.cc 
 
 endif
