--- a/configure.ac
+++ b/configure.ac
@@ -1,9 +1,9 @@
 # Process this file with autoconf to produce a configure script.
 AC_PREREQ(2.50)
 
-# current version of ALU3d-Grid
-AC_INIT(ALU3d-Grid, 0.1, alu3dgrid@mathematik.uni-freiburg.de)
-AM_INIT_AUTOMAKE(ALU3d-Grid, 0.1, alu3dgrid@mathematik.uni-freiburg.de)
+# current version of ALUGrid
+AC_INIT(ALUGrid, 0.1, alugrid@mathematik.uni-freiburg.de)
+AM_INIT_AUTOMAKE(ALUGrid, 0.1, alugrid@mathematik.uni-freiburg.de)
 
 # default install path is current directory 
 AC_PREFIX_DEFAULT([`pwd`])
@@ -16,17 +16,18 @@ AC_CONFIG_SRCDIR([src/serial/gitter_sti.h])
 # which header-file is created
 AM_CONFIG_HEADER(config.h)
 
-# do the check for the neccessary components for ALU3d-Grid 
-ALU3D_CHECK_ALL
+# do the check for the neccessary components for ALUGrid 
+ALUGRID_CHECK_ALL
 
 # defines libtool to build the lib
 AC_PROG_LIBTOOL 
 
 # implicitly set the ALU3dGrid-include everywhere
-CPPFLAGS="$CPPFLAGS $ALU3D_CPPFLAGS"
-# implicitly set the Dune-flags everywhere
-LDFLAGS="$ALU3D_LDFLAGS"
-LIBS="$ALU3D_LIBS"
+CPPFLAGS="$CPPFLAGS $ALUGRID_CPPFLAGS"
+
+# implicitly set the ALUGrid-flags everywhere
+LDFLAGS="$ALUGRID_LDFLAGS"
+LIBS="$ALUGRID_LIBS"
 
 
 # generate Makefiles
@@ -43,4 +44,4 @@ AC_CONFIG_FILES([Makefile
 AC_OUTPUT
 
 # show search results
-ALU3D_SUMMARY_ALL
+ALUGRID_SUMMARY_ALL
