--- a/misc/macrogrids/Makefile.am
+++ b/misc/macrogrids/Makefile.am
@@ -1,4 +1,4 @@
 # Makefile.am for distributing all macrogrids 
 AUTOMAKE_OPTIONS = foreign 1.5
 
-EXTRA_DIST = macro.big  macro.small reference.hexa  reference.tetra
+EXTRA_DIST = cube.tetra  cube.hexa reference.hexa  reference.tetra
