no dist at the moment
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@531 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/alu2d/Makefile.am
+++ b/src/alu2d/Makefile.am
@@ -1,7 +1,4 @@
 # Makefile.am for distributing all cc-files
 AUTOMAKE_OPTIONS = foreign 1.5
 
-EXTRA_DIST = grid.h  handle.h triang.h \
-vmmap.h  vtx_btree.h  xdisplay.h \
-grid.cc hdlrw.cc mknbrs.cc vmmap.cc xdisplay.cc \
-handle.cc main2d.cc triang.cc vtx_btree.cc
+EXTRA_DIST =
