--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ AC_CONFIG_FILES([Makefile
                  src/serial/Makefile
                  src/parallel/Makefile
                  src/duneinterface/Makefile
+                 src/alu2d/Makefile
                  misc/Makefile
                  misc/macrogrids/Makefile
                  misc/examples/Makefile
