Removed useless makefile.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@543 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 # Makefile.am for building the ALU3d-Grid library
 AUTOMAKE_OPTIONS = foreign 1.5
 
-SUBDIRS = serial parallel duneinterface alu2d
+SUBDIRS = 
+#serial parallel duneinterface alu2d
 
 # here the headers to install are defined 
 include serial/Makefile.am.include
