we need Makefile for make dist.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@641 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,9 @@ LIBS="$ALUGRID_LIBS"
 
 # generate Makefiles
 AC_CONFIG_FILES([Makefile
+                 src/serial/Makefile
+                 src/parallel/Makefile
+                 src/duneinterface/Makefile
                  src/Makefile
                  misc/Makefile
                  misc/macrogrids/Makefile
