added alu2d Makefile.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@649 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/configure.ac
+++ b/configure.ac
@@ -35,6 +35,7 @@ AC_CONFIG_FILES([Makefile
                  src/serial/Makefile
                  src/parallel/Makefile
                  src/duneinterface/Makefile
+                 src/alu2d/Makefile
                  src/Makefile
                  misc/Makefile
                  misc/macrogrids/Makefile
