improved runtime by inlining the Element methods, added new file grid_imp.cc and added it to Makefile
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@665 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/alu2d/Makefile.am.include
+++ b/src/alu2d/Makefile.am.include
@@ -1,2 +1,2 @@
 alu = alu2d
-alu2dhdrs= $(alu)/grid.h  $(alu)/handle.h  $(alu)/triang.h $(alu)/vmmap.h  $(alu)/vtx_btree.h  $(alu)/xdisplay.h $(alu)/indexstack2d.h $(alu)/xdisplay_imp.hh
+alu2dhdrs= $(alu)/grid.h  $(alu)/handle.h  $(alu)/triang.h $(alu)/vmmap.h  $(alu)/vtx_btree.h  $(alu)/xdisplay.h $(alu)/indexstack2d.h $(alu)/xdisplay_imp.hh  $(alu)/grid_imp.cc
