--- a/src/alu2d/Makefile.am
+++ b/src/alu2d/Makefile.am
@@ -1,5 +1,5 @@
 # Makefile.am for distributing all cc-files
 AUTOMAKE_OPTIONS = foreign 1.5
 
-EXTRA_DIST = grid.cc    hdlrw.cc   mknbrs.cc  vmmap.cc      xdisplay.cc\
+EXTRA_DIST = hdlrw.cc   mknbrs.cc  vmmap.cc      xdisplay.cc\
   handle.cc  main2d.cc  triang.cc  vtx_btree.cc
