cleanup to make dist work
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@713 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,7 @@ AUTOMAKE_OPTIONS = foreign 1.5
 
 CXXFLAGS = -O3 -DNDEBUG -unroll
 
-SUBDIRS = serial parallel duneinterface 
-#serial parallel duneinterface alu2d
+SUBDIRS = serial parallel duneinterface alu2d 
 
 # here the headers to install are defined 
 include serial/Makefile.am.include
