--- a/src/serial/Makefile.am.include
+++ b/src/serial/Makefile.am.include
@@ -3,4 +3,5 @@ serialhdrs = $(serialdirec)/alloca.h $(serialdirec)/gitter_tetra_top.h $(seriald
 	$(serialdirec)/gitter_hexa_top.h $(serialdirec)/headers.h $(serialdirec)/mapp_tetra_3d_ext.h $(serialdirec)/walk.h\
 	$(serialdirec)/gitter_impl.h $(serialdirec)/mapp_tetra_3d.h $(serialdirec)/xdrclass.h\
 	$(serialdirec)/gitter_mgb.h $(serialdirec)/key.h	$(serialdirec)/myalloc.h\
-	$(serialdirec)/gitter_sti.h $(serialdirec)/lock.h	$(serialdirec)/parallel.h 
+	$(serialdirec)/gitter_sti.h $(serialdirec)/lock.h	$(serialdirec)/parallel.h \
+  $(serialdirec)/ghost_elements.h
