--- a/misc/Makefile.am
+++ b/misc/Makefile.am
@@ -1,4 +1,4 @@
 AUTOMAKE_OPTIONS = foreign 1.5
 SUBDIRS= macrogrids examples versioncheck
-EXTRA_DIST=loadbalancing.cfg
+EXTRA_DIST=alugrid.cfg
 inst_PROGRAM=alugrid-version.sh
