bug fix, only use *.h etc.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@892 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,5 +6,7 @@ SUBDIRS = src misc
 
 # add library name, authors list, and licence to progam files
 dist-hook:
-	find $(distdir) -name "*.h*" -exec ./addauthors.sh ./AUTHORS {} \;
-	find $(distdir) -name "*.c*" -exec ./addauthors.sh ./AUTHORS {} \;
+	find $(distdir) -name "*.h" -exec ./addauthors.sh ./AUTHORS {} \;
+	find $(distdir) -name "*.hh" -exec ./addauthors.sh ./AUTHORS {} \;
+	find $(distdir) -name "*.c" -exec ./addauthors.sh ./AUTHORS {} \;
+	find $(distdir) -name "*.cc" -exec ./addauthors.sh ./AUTHORS {} \;
