--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ AUTOMAKE_OPTIONS = foreign 1.5
 # do everything in the subdirs
 SUBDIRS = src misc 
 
-# add library name, authors list, and licence to progam files
+# add library name, authors list, and license to progam files
 dist-hook:
 	find $(distdir) -name "*.h" -exec ./addauthors.sh ./AUTHORS {} \;
 	find $(distdir) -name "*.hh" -exec ./addauthors.sh ./AUTHORS {} \;
