--- a/misc/examples/Makefile.am
+++ b/misc/examples/Makefile.am
@@ -2,9 +2,9 @@
 AUTOMAKE_OPTIONS = foreign 1.5
 
 # work arround for automake versions < 1.8 
-#SOURCE_DIR=../../src
-#AM_CPPFLAGS = -I$(SOURCE_DIR) -I$(SOURCE_DIR)/serial -I$(SOURCE_DIR)/parallel -I$(SOURCE_DIR)/duneinterface 
+SOURCE_DIR=../../src
+AM_CPPFLAGS = -I$(SOURCE_DIR) -I$(SOURCE_DIR)/serial -I$(SOURCE_DIR)/parallel -I$(SOURCE_DIR)/duneinterface 
 
 # headers to install 
-#noinst_PROGRAMS = example
-#example_SOURCES = example.cc $(SOURCE_DIR)/alugrid_serial.cc 
+noinst_PROGRAMS = example
+example_SOURCES = example.cc $(SOURCE_DIR)/alugrid_serial.cc 
