--- a/misc/alugrid.cfg
+++ b/misc/alugrid.cfg
@@ -11,11 +11,14 @@ ldb_over
 Graph partitioning method:
 NONE = 0
 COLLECT = 1
+
 PARTY_helpfulSet = 3
 PARTY_kernighanLin = 4
+PARTY_random = 5
+PARTY_scattered = 6
 PARTY_linear = 7
-PARTY_gain = 8
-PARTY_farhat = 9
+PARTY_breathfirst = 8
+PARTY_cutfirst = 9
+
 METIS_PartGraphKway = 11
 METIS_PartGraphRecursive = 12
-
