removed ANSI_HEADER
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1048 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/alu2d/Makefile.am
+++ b/src/alu2d/Makefile.am
@@ -2,4 +2,4 @@
 AUTOMAKE_OPTIONS = foreign 1.5
 
 EXTRA_DIST = hdlrw.cc   mknbrs.cc  vmmap.cc      xdisplay.cc\
-  handle.cc  main2d.cc  triang.cc  vtx_btree.cc
+  handle.cc  triang.cc  vtx_btree.cc
