removed ANSI_HEADER
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1049 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/serial/Makefile.am.include
+++ b/src/serial/Makefile.am.include
@@ -1,5 +1,5 @@
 serialdirec = serial
-serialhdrs = $(serialdirec)/alloca.h $(serialdirec)/gitter_tetra_top.h $(serialdirec)/mapp_cube_3d.h $(serialdirec)/serialize.h\
+serialhdrs = $(serialdirec)/gitter_tetra_top.h $(serialdirec)/mapp_cube_3d.h $(serialdirec)/serialize.h\
 	$(serialdirec)/gitter_hexa_top.h $(serialdirec)/headers.h $(serialdirec)/mapp_tetra_3d_ext.h $(serialdirec)/walk.h\
 	$(serialdirec)/gitter_impl.h $(serialdirec)/mapp_tetra_3d.h $(serialdirec)/xdrclass.h\
 	$(serialdirec)/gitter_mgb.h $(serialdirec)/key.h	$(serialdirec)/myalloc.h\
