--- a/misc/alugrid.cfg
+++ b/misc/alugrid.cfg
@@ -1,6 +1,6 @@
 0.0
 1.2
-11
+13
 
 
 --- 
@@ -22,3 +22,5 @@ PARTY_cutfirst = 9
 
 METIS_PartGraphKway = 11
 METIS_PartGraphRecursive = 12
+
+ParMETIS_V3_AdaptiveRepart = 13
