new version and misc/examples
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1118 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 AC_PREREQ(2.50)
 
 # current version of ALUGrid
-AC_INIT(ALUGrid, 1.14, alugrid@mathematik.uni-freiburg.de)
-AM_INIT_AUTOMAKE(ALUGrid, 1.14, alugrid@mathematik.uni-freiburg.de)
+AC_INIT(ALUGrid, 2.0, alugrid@mathematik.uni-freiburg.de)
+AM_INIT_AUTOMAKE(ALUGrid, 2.0, alugrid@mathematik.uni-freiburg.de)
 
 # default install path is current directory 
 AC_PREFIX_DEFAULT([`pwd`])
@@ -29,6 +29,11 @@ CPPFLAGS="$CPPFLAGS $ALUGRID_CPPFLAGS"
 LDFLAGS="$ALUGRID_LDFLAGS"
 LIBS="$ALUGRID_LIBS"
 
+# generate Makefiles when existent 
+AC_CHECK_FILE([misc/examples/Makefile.am],
+              [AC_CONFIG_FILES([misc/examples/Makefile
+              ])],
+              [])
 
 # generate Makefiles
 AC_CONFIG_FILES([Makefile
