move a lot of extra stuff into the lib
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1198 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/alu2d/Makefile.am
+++ b/src/alu2d/Makefile.am
@@ -1,5 +1,5 @@
 # Makefile.am for distributing all cc-files
 AUTOMAKE_OPTIONS = foreign 1.5
 
-EXTRA_DIST = hdlrw.cc   mknbrs.cc  vmmap.cc      xdisplay.cc\
-  handle.cc  triang.cc  vtx_btree.cc
+EXTRA_DIST = grid.cc  hdlrw.cc   mknbrs.cc  vmmap.cc \
+  xdisplay.cc  handle.cc  triang.cc  vtx_btree.cc
