--- a/src/serial/Makefile.am
+++ b/src/serial/Makefile.am
@@ -1,5 +1,5 @@
 # Makefile.am for distributing all cc-files
 AUTOMAKE_OPTIONS = foreign 1.5
 
-EXTRA_DIST = gitter_geo.cc  gitter_mgb.cc  gitter_sti.cc  mapp_cube_3d.cc\
+EXTRA_DIST = gitter_geo.cc  gitter_impl.cc  gitter_mgb.cc  gitter_sti.cc  mapp_cube_3d.cc\
 mapp_tetra_3d.cc  myalloc.cc  xdrclass.cc
