put some in the lib
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1202 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/serial/Makefile.am
+++ b/src/serial/Makefile.am
@@ -2,4 +2,4 @@
 AUTOMAKE_OPTIONS = foreign 1.5
 
 EXTRA_DIST = gitter_geo.cc  gitter_impl.cc  gitter_mgb.cc  gitter_sti.cc  mapp_cube_3d.cc\
-mapp_tetra_3d.cc  myalloc.cc  xdrclass.cc
+mapp_tetra_3d.cc  myalloc.cc  xdrclass.cc ghost_elements.cc
