--- a/src/parallel/Makefile.am
+++ b/src/parallel/Makefile.am
@@ -2,4 +2,5 @@
 AUTOMAKE_OPTIONS = foreign 1.5
 
 EXTRA_DIST = gitter_pll_idn.cc   gitter_pll_ldb.cc  gitter_pll_sti.cc\
-mpAccess_MPI.cc gitter_pll_impl.cc  gitter_pll_mgb.cc  mpAccess.cc
+mpAccess_MPI.cc gitter_pll_impl.cc  gitter_pll_mgb.cc  mpAccess.cc \
+gitter_tetra_top_pll.cc
