call AC_CONFIG_MACRO_DIR
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1244 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/configure.ac
+++ b/configure.ac
@@ -13,6 +13,7 @@ AC_DISABLE_SHARED
 
 # check if we're in the right directory
 AC_CONFIG_SRCDIR([src/serial/gitter_sti.h])
+AC_CONFIG_MACRO_DIR([m4])
 # which header-file is created
 AM_CONFIG_HEADER(config.h)
 
