--- a/src/alu2d/Makefile.am.include
+++ b/src/alu2d/Makefile.am.include
@@ -1,2 +1,2 @@
 alu = alu2d
-alu2dhdrs= $(alu)/grid.h  $(alu)/handle.h  $(alu)/triang.h $(alu)/vmmap.h  $(alu)/vtx_btree.h  $(alu)/xdisplay.h $(alu)/xdisplay_imp.hh  $(alu)/grid_imp.cc
+alu2dhdrs= $(alu)/grid.h  $(alu)/handle.h  $(alu)/triang.h $(alu)/vmmap.h  $(alu)/vtx_btree.h  $(alu)/xdisplay.h $(alu)/xdisplay_imp.hh  $(alu)/grid_imp.cc $(alu)/vtxprojection.h
