removed _DUNE_NOT_USES_ALU3DGRID_
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1282 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,7 +19,7 @@ lib_LTLIBRARIES = libalugrid.la
 nobase_include_HEADERS = alugrid_serial.h alugrid_parallel.h alugrid_2d.h stlheaders.h indexstack.h projectvertex.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs) $(alu2dhdrs)
 
 # add all package flags 
-AM_CPPFLAGS = $(ALUGRID_CPPFLAGS)
+AM_CPPFLAGS = -Wfatal-errors $(ALUGRID_CPPFLAGS)
 libalugrid_la_CPPFLAGS = $(ALUGRID_CPPFLAGS) $(ALL_PKG_CPPFLAGS)
 libalugrid_la_LIBADD = $(PARMETIS_LDFLAGS) $(PARMETIS_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) $(MPI_LDFLAGS) $(MPI_LIBS)
 
