mem data output.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1285 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/misc/examples/Makefile.am
+++ b/misc/examples/Makefile.am
@@ -2,19 +2,19 @@
 AUTOMAKE_OPTIONS = foreign 1.5
 
 #CXXFLAGS=-O3 -funroll-loops -finline-functions -DNDEBUG 
-CXXFLAGS=-g -Wall 
-#CXX=g++-4.3.2
+CXXFLAGS=-g -Wall -Wfatal-errors
+CXX=mpiCC
 
 #MPI_LIBS=-pthread -L/usr/lib64 -lmpi_cxx -lmpi -lopen-rte -lopen-pal -ldl -Wl,--export-dynamic -lnsl -lutil -lm -ldl
 
 # work arround for automake versions < 1.8 
 SOURCE_DIR=../../src
-AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I$(SOURCE_DIR) -I$(SOURCE_DIR)/serial -I$(SOURCE_DIR)/parallel -I$(SOURCE_DIR)/duneinterface 
+AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) $(MPI_CPPFLAGS)  -I$(SOURCE_DIR) -I$(SOURCE_DIR)/serial -I$(SOURCE_DIR)/parallel -I$(SOURCE_DIR)/duneinterface 
 
 # headers to install 
-noinst_PROGRAMS = loadlb # example sizes # adapt
+noinst_PROGRAMS = loadlb sizes # example sizes # adapt
 #example_SOURCES = example.cc $(SOURCE_DIR)/alugrid_serial.cc 
-#sizes_SOURCES = sizes.cc $(SOURCE_DIR)/alugrid_serial.cc 
+sizes_SOURCES = sizes.cc $(SOURCE_DIR)/alugrid_serial.cc  
 #adapt_SOURCES = adapt.cc $(SOURCE_DIR)/alugrid_2d.cc $(SOURCE_DIR)/alugrid_serial.cc
 loadlb_SOURCES = loadlb.cc  $(SOURCE_DIR)/alugrid_serial.cc $(SOURCE_DIR)/alugrid_parallel.cc
 loadlb_LDADD = $(PARTY_LDFLAGS) $(PARTY_LIBS) $(PARMETIS_LDFLAGS) $(PARMETIS_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) 
