--- a/src/serial/Makefile.am.include
+++ b/src/serial/Makefile.am.include
@@ -4,4 +4,5 @@ serialhdrs = $(serialdirec)/gitter_tetra_top.h $(serialdirec)/mapp_cube_3d.h $(s
 	$(serialdirec)/gitter_impl.h $(serialdirec)/mapp_tetra_3d.h $(serialdirec)/xdrclass.h\
 	$(serialdirec)/gitter_mgb.h $(serialdirec)/key.h	$(serialdirec)/myalloc.h\
 	$(serialdirec)/gitter_sti.h $(serialdirec)/lock.h	$(serialdirec)/parallel.h \
-  $(serialdirec)/ghost_elements.h $(serialdirec)/ghost_info.h
+  $(serialdirec)/elementif.h \
+  $(serialdirec)/ghost_elements.h $(serialdirec)/ghost_info.h 
