--- a/misc/examples/Makefile.am
+++ b/misc/examples/Makefile.am
@@ -3,6 +3,7 @@ AUTOMAKE_OPTIONS = foreign 1.5
 
 #CXXFLAGS=-O3 -funroll-loops -finline-functions -DNDEBUG 
 CXXFLAGS=-g -Wall -Wfatal-errors
+#CXXFLAGS=-g -Wall 
 CXX=mpiCC
 
 #MPI_LIBS=-pthread -L/usr/lib64 -lmpi_cxx -lmpi -lopen-rte -lopen-pal -ldl -Wl,--export-dynamic -lnsl -lutil -lm -ldl
@@ -13,10 +14,13 @@ AM_CPPFLAGS = $(ALL_PKG_CPPFLAGS) $(MPI_CPPFLAGS)  -I$(SOURCE_DIR) -I$(SOURCE_DI
 LDADD = $(PARTY_LDFLAGS) $(PARTY_LIBS) $(PARMETIS_LDFLAGS) $(PARMETIS_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) 
 
 # headers to install 
-noinst_PROGRAMS = loadlb sizes # example sizes # adapt
+#noinst_PROGRAMS = loadlb sizes triang adapt # example sizes # adapt
+noinst_PROGRAMS = sizes loadlb # example sizes # adapt
 #example_SOURCES = example.cc $(SOURCE_DIR)/alugrid_serial.cc 
 sizes_SOURCES = sizes.cc $(SOURCE_DIR)/alugrid_serial.cc $(SOURCE_DIR)/alugrid_parallel.cc
-#adapt_SOURCES = adapt.cc $(SOURCE_DIR)/alugrid_2d.cc $(SOURCE_DIR)/alugrid_serial.cc
+triang_SOURCES = triang.cc $(SOURCE_DIR)/alugrid_2d.cc 
+#sizes_SOURCES = sizes.cc $(SOURCE_DIR)/alugrid_serial.cc
+adapt_SOURCES = adapt.cc $(SOURCE_DIR)/alugrid_2d.cc $(SOURCE_DIR)/alugrid_serial.cc
 loadlb_SOURCES = loadlb.cc  $(SOURCE_DIR)/alugrid_serial.cc $(SOURCE_DIR)/alugrid_parallel.cc
 loadlb_LDADD = $(PARTY_LDFLAGS) $(PARTY_LIBS) $(PARMETIS_LDFLAGS) $(PARMETIS_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) 
 
