remove PARTY since it was not working for years now.
git-svn-id: https://dune.mathematik.uni-freiburg.de/svn/alugrid/trunk@1479 0d966ed9-3843-0410-af09-ebfb50bd7c74

--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,6 +1,6 @@
 # $Id$
 
-ALLM4S = alu3d_all.m4 alu3d_mpi.m4 metis.m4 party.m4 xdr.m4
+ALLM4S = alu3d_all.m4 alu3d_mpi.m4 metis.m4 xdr.m4
 
 aclocaldir = $(datadir)/aclocal
 aclocal_DATA = $(ALLM4S)
